--- a/package.json
+++ b/package.json
@@ -19,9 +19,15 @@
     "@angular/platform-browser": "~11.2.7",
     "@angular/platform-browser-dynamic": "~11.2.7",
     "@angular/router": "~11.2.7",
+    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "@ngx-progressbar/core": "^3.0.2",
+    "@ngx-progressbar/http-client": "^3.0.2",
+    "bootstrap": "^5.1.1",
     "local-cors-proxy": "^1.1.0",
+    "ngx-bootstrap": "^7.1.0",
     "ngx-toastr": "^14.1.3",
     "rxjs": "~6.6.0",
+    "rxjs-compat": "^6.6.7",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
