--- a/package.json
+++ b/package.json
@@ -12,21 +12,24 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.2.7",
+    "@angular/cdk": "^12.2.8",
     "@angular/common": "^11.2.14",
     "@angular/compiler": "~11.2.7",
     "@angular/core": "~11.2.7",
-    "@angular/forms": "~11.2.7",
-    "@angular/material": "^12.2.8",
+    "@angular/forms": "^11.2.14",
+    "@angular/material": "^12.2.9",
     "@angular/platform-browser": "~11.2.7",
     "@angular/platform-browser-dynamic": "~11.2.7",
     "@angular/router": "~11.2.7",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "@ngx-progressbar/core": "^3.0.2",
     "@ngx-progressbar/http-client": "^3.0.2",
-    "bootstrap": "^5.1.1",
+    "angular-bootstrap-md": "^12.0.0",
+    "bootstrap": "^5.1.3",
     "local-cors-proxy": "^1.1.0",
     "ngx-bootstrap": "^7.1.0",
     "ngx-toastr": "^14.1.3",
+    "popper": "^1.0.1",
     "rxjs": "~6.6.0",
     "rxjs-compat": "^6.6.7",
     "tslib": "^2.0.0",
